--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
     <script src="https://code.jquery.com/jquery-2.0.3.min.js" integrity="sha256-sTy1mJ4I/LAjFCCdEB4RAvPSmRCb3CU7YqodohyeOLo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script src="scripts/jquery.mobile-1.4.5.min.js"></script>
     <script src="scripts/index.js"></script>
     <title>ProjectQuiz</title>
