--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
     
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-2.0.1.js" integrity="sha256-gg+zOP6MdHihuCDicItP0wamiCXeEZSAPnqT+8IXehY=" crossorigin="anonymous"></script>
+    <script src="scripts/jquery-2.0.1.js"></script>
     <script src="scripts/jquery.mobile-1.4.5.min.js"></script>
     <script src="scripts/index.js"></script>
     <title>ProjectQuiz</title>
