Add jqm select menu

--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -26,9 +26,9 @@
         </div>
         <div data-role="main" class="ui-content">
             <div class="page-container">
-                <div id="questions">
+                <div data-role="content" id="questions">
                     
-                    <div data-role="collapsible" data-theme="b" data-content-theme="a" data-collapsed="false"  data-collapsed-icon="" data-expanded-icon="" id="questionSection"  >
+                    <div data-role="collapsible" data-theme="b" data-content-theme="b" data-collapsed="false"  data-collapsed-icon="" data-expanded-icon="" id="questionSection"  >
                         <h3 id="head3">Start</h3>
                         
                         <p id="para">
