Added back button to header

--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -33,7 +33,7 @@
         
     </div>
     <div data-role="page" id="quiz-page-one">
-        <div data-role="header" id="header" data-theme="b">
+        <div data-role="header" id="header" data-theme="b" data-add-back-btn="true">
             <p id="header-text">Quiz Page</p>
         </div>
         <div data-role="main" class="ui-content">
