--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -31,9 +31,12 @@
                     <br />
                     <a data-role="button" href="examGrade.html" id="btnExamGrade" class="ui-btn ui-btn-inline ui-btn-b ui-corner-all ui-shadow custom-btn">Exam Grade</a>
                 </div>
+                <div id="container"></div>
             </div>
         </div>
+        
     </div>
+    <script src="scripts/test.js"></script>
     <script src="scripts/index.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
