--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -23,13 +23,13 @@
 <body>
 
     <div data-role="page" id="front-page" data-theme="b">
-        <div data-role="navbar" >
+        <!--<div data-role="navbar" >
             <ul>
                 <li><a href="#"  id="btnMain" class="ui-btn-active">Main</a></li>
                 <li><a href="#"  id="btnMoodSurvey">Mood Survey</a></li>
                 <li><a href="#"  id="btnExamGrade">Exam Grade</a></li>
             </ul>
-        </div>
+        </div>-->
         <div data-role="main" class="ui-content" id="main">
 
         </div>
