Added IDs to user input

--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-    <div data-role="page" id="front-page" data-theme="b">
+    <div data-role="page" class="myFront" id="front-page" data-theme="b">
        
         <div data-role="main" class="ui-content" id="main">
 
