Comments and clean up

--- a/BlankCordovaApp1/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/index.html
@@ -36,7 +36,35 @@
        
         <div data-role="main" class="ui-content" id="main">
 
-        </div>
+            <div data-role="popup" class="ui-content" id="popupSignUp" data-overlay-theme="b" data-theme="a" data-dismissible="false" style="max-width:400px;">
+                <div role="main" class="ui-content">
+                    <p>You must sign up before you can play.</p>
+                    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back">Close</a>
+                </div>
+            </div>
+
+            <div data-role="popup" class="ui-content" id="popupUserNameExists" data-overlay-theme="b" data-theme="a" data-dismissible="false" style="max-width:400px;">
+                <div role="main" class="ui-content">
+                    <p>User Name exist please choose another.</p>
+                    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back">Close</a>
+                </div>
+            </div>
+
+            <div data-role="popup" class="ui-content" id="popupContentSaved" data-overlay-theme="b" data-theme="a" data-dismissible="false" style="max-width:400px;">
+                <div role="main" class="ui-content">
+                    <p>Your data has been saved.</p>
+                    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back">Close</a>
+                </div>
+            </div>
+
+            <div data-role="popup" class="ui-content" id="popupNoExam" data-overlay-theme="b" data-theme="a" data-dismissible="false" style="max-width:400px;">
+                <div role="main" class="ui-content">
+                    <p>No saved exam exists.</p>
+                    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back">Close</a>
+                </div>
+            </div>
+
+            </div>
         
         </div>
 
